--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,8 @@
-# ----------------- #
-# ウィンドウの振る舞い #
-# ----------------- #
-
-## ウィンドウ番号1から開始する
+# ウィンドウ番号1から開始する
 set-option -g base-index 1
 
 # ウィンドウ(タブ)を閉じた時、ウインドウ番号を付番をしなおす
 set-option -g renumber-windows on
-
-# ------------------- #
-# ステータスバーの見た目 #
-# ------------------- #
 
 # 色コード: http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html
 
