--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,3 +33,8 @@ set -g status-right ''
 # escape 待ち時間
 set -g escape-time 0
 
+# マウスの挙動
+set -g mouse on
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
