--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -10,3 +10,7 @@ repo = 'chriskempson/vim-tomorrow-theme'
 [[plugins]]
 repo = 'itchyny/lightline.vim'
 
+[[plugins]]
+repo = "tpope/vim-fugitive"
+hook_add = 'source ~/.config/nvim/userautoload/plugins/plugins-vim-fugitive.vim'
+
