ステータスバーの設定は lightline の設定側に記述するように変更

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -32,5 +32,11 @@ hook_add = '''
     \   'gitbranch': 'fugitive#head'
     \ },
   \ }
+
+  " # show statusbar
+  set laststatus=2
+
+  " hide --INSERT--
+  set noshowmode
 '''
 
