neovim のプラグインに neoterm を追加。

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -33,10 +33,48 @@ hook_add = '''
     \ },
   \ }
 
-  " # show statusbar
+  " show statusbar
   set laststatus=2
 
   " hide --INSERT--
   set noshowmode
+'''
+
+[[plugins]]
+repo = 'kassio/neoterm'
+hook_add = '''
+  " :Tnew の場合に挿入モードで開始
+  let g:neoterm_autoinsert = 1
+
+  " :T {cmd} 実行時に画面スクロールする
+  let g:neoterm_autoscroll = 1
+
+  "let g:neoterm_default_mod = 'vertical'   " 縦分割
+  let g:neoterm_default_mod = 'belowright'  " 横分割
+
+  " :Tnew 実行
+  nnoremap <silent> <C-e><C-t> :Tnew<CR>
+
+  " :Tnew 実行(縦分割)
+  nnoremap <silent> <C-e><C-v> :vertical Tnew<CR>
+
+  " 現在の行を実行
+  nnoremap <silent> <C-e><C-e> :TREPLSendLine<CR>
+
+  " ビジュアルモードで洗濯中の行を実行
+  vnoremap <silent> <C-e><C-e> V:TREPLSendSelection<CR>
+
+  " ファイルそのものを実行
+  nnoremap <silent> <C-e><C-f> :TREPLSendFile<CR>
+
+  " <Esc> で terminal-mode を抜ける
+  tnoremap <Esc> <C-\><C-n>
+
+  " <C-w> で ウィンドウ移動
+  tnoremap <C-w><C-w> <C-\><C-n><C-w><C-w>
+  tnoremap <C-w><C-j> <C-\><C-n><C-w><C-j>
+  tnoremap <C-w><C-k> <C-\><C-n><C-w><C-k>
+  tnoremap <C-w><C-h> <C-\><C-n><C-w><C-h>
+  tnoremap <C-w><C-l> <C-\><C-n><C-w><C-l>
 '''
 
