vim-endwise を挿入モード時に読み込むように変更

--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -1,8 +1,11 @@
+# tomlファイル syntax
 [[plugins]]
 repo = 'cespare/vim-toml'
 on_ft = ['toml']
 
+# ruby 編集時 end を自動で補完
 [[plugins]]
 repo = 'tpope/vim-endwise'
+on_i = 1
 on_ft = ['ruby']
 
