--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -2,6 +2,51 @@
 repo = 'Shougo/dein.vim'
 
 [[plugins]]
+repo = 'Shougo/denite.nvim'
+hook_add = '''
+  " denite キー
+  noremap [denite] <Nop>
+  nmap <C-d> [denite]
+
+  " v で vsplit
+  call denite#custom#map('normal', "v", '<denite:do_action:vsplit>')
+
+  " grep
+  nnoremap <silent> [denite]<C-g> :<C-u>Denite grep
+    \ -no-empty -mode=normal<CR>
+  nnoremap <silent> [denite]<C-r> :<C-u>Denite -resume
+    \ -no-empty -mode=normal<CR>
+  "nnoremap <silent> [denite]<C-n> :<C-u>Denite -resume
+  "  \ -select=+1 -immediately<CR>
+  "nnoremap <silent> [denite]<C-p> :<C-u>Denite -resume
+  "  \ -select=-1 -immediately<CR>
+
+  nnoremap <silent> [denite]<C-n> :<C-u>Denite -resume
+    \ -cursor-pos=+1 -immediately<CR>
+  nnoremap <silent> [denite]<C-p> :<C-u>Denite -resume
+    \ -cursor-pos=-1 -immediately<CR>
+
+  " C-f でファイル一覧
+  nnoremap <silent> [denite]<C-f> :<C-u>Denite file/rec
+    \ -no-empty -mode=normal<CR>
+
+  " C-d で dotfiles 編集
+  nnoremap <silent> [denite]<C-d> :<C-u>call denite#start(
+    \ [{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
+
+  " ripgrep 使用
+  if executable('rg')
+    call denite#custom#var('grep', 'command', ['rg'])
+    call denite#custom#var('grep', 'default_opts',
+      \ ['--vimgrep', '--no-heading'])
+    call denite#custom#var('grep', 'recursive_opts', [])
+    call denite#custom#var('grep', 'pattern_opt', ['--regexp'])
+    call denite#custom#var('grep', 'separator', ['--'])
+    call denite#custom#var('grep', 'final_opts', [])
+  endif
+'''
+
+[[plugins]]
 repo = 'vim-jp/vimdoc-ja'
 
 [[plugins]]
