--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -31,9 +31,10 @@ hook_add = '''
 
   " ripgrep 使用
   if executable('rg')
-    call denite#custom#var('grep', 'command', ['rg'])
-    call denite#custom#var('grep', 'default_opts',
-      \ ['--vimgrep', '--no-heading'])
+    call denite#custom#var('file/rec', 'command',
+      \ ['rg', '--files', '--glob', '!.git'])
+    call denite#custom#var('grep', 'command', ['rg', '--vimgrep', '--no-heading'])
+    call denite#custom#var('grep', 'default_opts', [])
     call denite#custom#var('grep', 'recursive_opts', [])
     call denite#custom#var('grep', 'pattern_opt', ['--regexp'])
     call denite#custom#var('grep', 'separator', ['--'])
