denite での grep を単語全一致での検索に変更

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -14,7 +14,7 @@ hook_add = '''
   " grep
   nnoremap <silent> [denite]<C-g> :<C-u>Denite grep
     \ -no-empty -mode=normal<CR>
-  nnoremap <silent> [denite]<C-k> :<C-u>Denite grep:::<C-r><C-w>
+  nnoremap <silent> [denite]<C-k> :<C-u>Denite grep:::\\b<C-r><C-w>\\b
     \ -no-empty -mode=normal<CR>
   nnoremap <silent> [denite]<C-r> :<C-u>Denite -resume
     \ -no-empty -mode=normal<CR>
