--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -37,7 +37,7 @@ hook_add = '''
 
   " [denite]<C-f> でファイル一覧
   nnoremap <silent> [denite]<C-f> :<C-u>Denite file/rec
-    \ -no-empty -mode=normal<CR>
+    \ -no-empty<CR>
 
   " [denite]<C-d> で dotfiles 編集
   nnoremap <silent> [denite]<C-d> :<C-u>call denite#start(
