lightline で inactive なバッファでも編集状態を表示

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -81,6 +81,10 @@ hook_add = '''
     \   'left': [ [ 'mode', 'paste' ],
     \             [ 'gitbranch', 'readonly', 'filename', 'modified' ] ]
     \ },
+    \ 'inactive': {
+    \   'left': [ [ 'mode', 'paste' ],
+    \             [ 'gitbranch', 'readonly', 'filename', 'modified' ] ]
+    \ },
     \ 'component_function': {
     \   'gitbranch': 'fugitive#head'
     \ },
