--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -83,7 +83,10 @@ hook_add = '''
     \ },
     \ 'inactive': {
     \   'left': [ [ 'mode', 'paste' ],
-    \             [ 'gitbranch', 'readonly', 'filename', 'modified' ] ]
+    \             [ 'gitbranch', 'readonly', 'filename', 'modified' ] ],
+    \   'right': [ [ 'lineinfo' ],
+    \              [ 'percent' ],
+    \              [ 'fileformat', 'fileencoding', 'filetype' ] ]
     \ },
     \ 'component_function': {
     \   'gitbranch': 'fugitive#head'
