Neovim: Add vim-rails

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -84,6 +84,9 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'tpope/vim-rails'
+
+[[plugins]]
 repo = 'itchyny/lightline.vim'
 hook_add = '''
   let g:lightline = {
