--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -59,6 +59,20 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'autozimu/LanguageClient-neovim'
+rev = 'next'
+build = 'bash install.sh'
+hook_add = '''
+  set hidden
+  
+  let g:LanguageClient_serverCommands = {
+    \ 'ruby': ['solargraph', 'stdio'],
+  \ }
+  
+  let g:LanguageClient_autoStart = 1
+'''
+
+[[plugins]]
 repo = 'vim-jp/vimdoc-ja'
 
 [[plugins]]
