--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -11,14 +11,9 @@ hook_add = '''
   " v で vsplit
   call denite#custom#map('normal', "v", '<denite:do_action:vsplit>')
 
-  " [denite]<C-g> でgrep
-  nnoremap <silent> [denite]<C-g> :<C-u>Denite grep
-    \ -no-empty -mode=normal<CR>
-
   " [denite]<C-k> で単語単位での grep
-  " (カーソル下の単語をレジスタzへ格納しペースト)
   nnoremap <silent> [denite]<C-k>
-    \ "zyiw:<C-u>Denite grep:::\\b<C-r>z\\b
+    \ :<C-u>Denite grep:::<C-r><C-w>
     \ -no-empty -mode=normal<CR>
 
   " [denite]<C-n> で検索結果を開き直す
@@ -49,12 +44,11 @@ hook_add = '''
   if executable('rg')
     call denite#custom#var('file/rec', 'command',
       \ ['rg', '--files', '--glob', '!.git'])
-    call denite#custom#var('grep', 'command', ['rg', '--vimgrep', '--no-heading'])
+
+    call denite#custom#var('grep', 'command',
+      \ ['rg', '--vimgrep', '--no-heading', '--word-regexp'])
     call denite#custom#var('grep', 'default_opts', [])
     call denite#custom#var('grep', 'recursive_opts', [])
-    call denite#custom#var('grep', 'pattern_opt', ['--regexp'])
-    call denite#custom#var('grep', 'separator', ['--'])
-    call denite#custom#var('grep', 'final_opts', [])
   endif
 '''
 
