--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -177,3 +177,10 @@ hook_add = '''
   augroup END
 '''
 
+[[plugins]]
+repo = 'simeji/winresizer'
+hook_add = '''
+  let g:winresizer_start_key = '<C-e><C-w>'
+  let g:winresizer_vert_resize = 1
+  let g:winresizer_horiz_resize = 1
+'''
