tmux: set mode-keys for vi

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,7 @@ set -g mouse on
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# 挙動を vim 向けに
+set-window-option -g mode-keys vi
+
