tmux: paneの移動、リサイズ、分割、コピーペーストのショートカットを登録

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# 'C-s': prefix
+unbind C-b
+set -g prefix C-s
+
 # ウィンドウ番号1から開始する
 set-option -g base-index 1
 
@@ -35,10 +39,49 @@ set -g escape-time 0
 
 # マウスの挙動
 set -g mouse on
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# 挙動を vim 向けに
-set-window-option -g mode-keys vi
+
+# 'h', 'j', 'k', 'l': select-pane
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# 'C-h', 'C-j', 'C-k', 'C-l': resize-pane
+bind -r C-h resize-pane -L 2
+bind -r C-j resize-pane -D 2
+bind -r C-k resize-pane -U 2
+bind -r C-l resize-pane -R 2
+
+# 'v': vertical split
+bind v split-window -h
+
+# 's': horizontal split
+bind s split-window -v
+
+# 'C-s': next-window
+bind C-s select-pane -t :.+
+
+# copy mode
+setw -g mode-keys vi
+
+# 'v': start selection
+bind -T copy-mode-vi v send -X begin-selection
+
+# 'V': linewise selection
+bind -T copy-mode-vi V send -X select-line
+
+# 'C-v': blockwise selection
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# 'y': yank
+bind -T copy-mode-vi y send -X copy-selection
+
+# 'Y': linewise selection
+bind -T copy-mode-vi Y send -X copy-line
+
+# 'C-p': paste
+bind-key C-p paste-buffer
 
