Neovim: Add vim-precious
* カーソル位置のコンテキストに合わせて ft を切り替える

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -182,3 +182,11 @@ repo = 'tomtom/tcomment_vim'
 [[plugins]]
 repo = 'tpope/vim-surround'
 
+# カーソル位置のコンテキストに合わせてftを切り替える
+[[plugins]]
+repo = 'osyo-manga/vim-precious'
+depends = ['context_filetype.vim']
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
+
+
