--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -115,6 +115,28 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo='prabirshrestha/async.vim'
+
+[[plugins]]
+repo='prabirshrestha/vim-lsp'
+hook_add='''
+  if executable('clangd')
+    augroup LspCpp
+      au!
+      autocmd User lsp_setup call lsp#register_server({
+          \ 'name': 'clangd',
+          \ 'cmd': {server_info->['clangd']},
+          \ 'whitelist': ['c', 'cpp'],
+          \ })
+      autocmd FileType c setlocal omnifunc=lsp#complete
+      autocmd FileType cpp setlocal omnifunc=lsp#complete
+    augroup END
+  endif
+
+  let g:lsp_async_completion = 0
+'''
+
+[[plugins]]
 repo = 'tpope/vim-rails'
 
 [[plugins]]
