--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -133,6 +133,19 @@ hook_add='''
     augroup END
   endif
 
+  if executable('solargraph')
+    augroup LspRuby
+      au!
+      autocmd User lsp_setup call lsp#register_server({
+        \ 'name': 'solargraph',
+        \ 'cmd': {server_info->[&shell, &shellcmdflag, 'solargraph stdio']},
+        \ 'initialization_options': {"diagnostics": "true"},
+        \ 'whitelist': ['ruby'],
+        \ })
+      autocmd FileType ruby setlocal omnifunc=lsp#complete
+    augroup END
+  endif
+
   let g:lsp_async_completion = 0
 '''
 
