--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -5,12 +5,12 @@ repo = 'Shougo/dein.vim'
 repo = 'chriskempson/vim-tomorrow-theme'
 hook_add = '''
   set t_Co=256
-  au DeinAutoCmd VimEnter * nested colorscheme Tomorrow-Night-Bright
+  autocmd myinit VimEnter * nested colorscheme Tomorrow-Night-Bright
   " vimdiffの色設定
-  au DeinAutoCmd VimEnter * highlight DiffAdd    ctermbg=22
-  au DeinAutoCmd VimEnter * highlight DiffDelete ctermbg=52
-  au DeinAutoCmd VimEnter * highlight DiffChange ctermbg=17
-  au DeinAutoCmd VimEnter * highlight DiffText   ctermbg=21
+  autocmd myinit VimEnter * highlight DiffAdd    ctermbg=22
+  autocmd myinit VimEnter * highlight DiffDelete ctermbg=52
+  autocmd myinit VimEnter * highlight DiffChange ctermbg=17
+  autocmd myinit VimEnter * highlight DiffText   ctermbg=21
 '''
 
 [[plugins]]
@@ -111,7 +111,7 @@ hook_add = '''
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
 hook_add = '''
-  au DeinAutoCmd VimEnter * set updatetime=100
+  autocmd myinit VimEnter * set updatetime=100
 '''
 
 [[plugins]]
@@ -122,7 +122,7 @@ repo='prabirshrestha/vim-lsp'
 hook_add='''
   if executable('clangd')
     augroup LspCpp
-      au!
+      autocmd!
       autocmd User lsp_setup call lsp#register_server({
           \ 'name': 'clangd',
           \ 'cmd': {server_info->['clangd']},
@@ -135,7 +135,7 @@ hook_add='''
 
   if executable('solargraph')
     augroup LspRuby
-      au!
+      autocmd!
       autocmd User lsp_setup call lsp#register_server({
         \ 'name': 'solargraph',
         \ 'cmd': {server_info->[&shell, &shellcmdflag, 'solargraph stdio']},
@@ -229,10 +229,7 @@ hook_add = '''
   set updatetime=2000
   " 一定時間キー入力がないとき、ウインドウを移動したとき、タブを移動したときに
   " 検索ヒット数の表示を消去する
-  augroup vim-anzu
-    autocmd!
-    autocmd CursorHold,CursorHoldI,WinLeave,TabLeave * call anzu#clear_search_status()
-  augroup END
+  autocmd myinit CursorHold,CursorHoldI,WinLeave,TabLeave * call anzu#clear_search_status()
 '''
 
 [[plugins]]
