--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -34,7 +34,7 @@ repo = 'Shougo/denite.nvim'
 hook_add = '''
   " denite キー
   noremap [denite] <Nop>
-  nmap <C-d> [denite]
+  nmap <Space>d [denite]
 
   " s で split
   call denite#custom#map('normal', "s", '<denite:do_action:split>')
@@ -54,41 +54,41 @@ hook_add = '''
   call denite#custom#map('insert', '<C-j>', '<denite:move_to_next_line>')
   call denite#custom#map('insert', '<C-k>', '<denite:move_to_previous_line>')
 
-  " [denite]<C-k> で単語単位での grep
-  nnoremap <silent> [denite]<C-k>
+  " [denite]k で単語単位での grep
+  nnoremap <silent> [denite]k
   \ :<C-u>Denite grep:::<C-r><C-w>
   \ -no-empty -mode=normal<CR>
 
-  " [denite]<C-r> で検索結果を開き直す
-  nnoremap <silent> [denite]<C-r> :<C-u>Denite -resume
+  " [denite]r で検索結果を開き直す
+  nnoremap <silent> [denite]r :<C-u>Denite -resume
   \ -no-empty -mode=normal<CR>
 
-  " [denite]<C-n> で次の検索結果へ
-  nnoremap <silent> [denite]<C-n> :<C-u>Denite -resume
+  " [denite]n で次の検索結果へ
+  nnoremap <silent> [denite]n :<C-u>Denite -resume
   \ -cursor-pos=+1 -immediately<CR>
 
-  " [denite]<C-p> で前の検索結果へ
-  nnoremap <silent> [denite]<C-p> :<C-u>Denite -resume
+  " [denite]p で前の検索結果へ
+  nnoremap <silent> [denite]p :<C-u>Denite -resume
   \ -cursor-pos=-1 -immediately<CR>
 
-  " [denite]<C-f> でプロジェクトファイル一覧
-  nnoremap <silent> [denite]<C-f> :<C-u>DeniteProjectDir file/rec
+  " [denite]f でプロジェクトファイル一覧
+  nnoremap <silent> [denite]f :<C-u>DeniteProjectDir file/rec
   \ -no-empty<CR>
 
-  " [denite]<C-s> でプロジェクトファイル一覧(default-action: split)
-  nnoremap <silent> [denite]<C-s> :<C-u>DeniteProjectDir file/rec
+  " [denite]s でプロジェクトファイル一覧(default-action: split)
+  nnoremap <silent> [denite]s :<C-u>DeniteProjectDir file/rec
   \ -no-empty -default-action=split<CR>
 
-  " [denite]<C-v> でプロジェクトファイル一覧(default-action: vsplit)
-  nnoremap <silent> [denite]<C-v> :<C-u>DeniteProjectDir file/rec
+  " [denite]v でプロジェクトファイル一覧(default-action: vsplit)
+  nnoremap <silent> [denite]v :<C-u>DeniteProjectDir file/rec
   \ -no-empty -default-action=vsplit<CR>
 
-  " [denite]<C-o> で oldfiles 一覧
-  nnoremap <silent> [denite]<C-o> :<C-u>Denite file/old
+  " [denite]o で oldfiles 一覧
+  nnoremap <silent> [denite]o :<C-u>Denite file/old
   \ -no-empty<CR>
 
-  " [denite]<C-d> で dotfiles 編集
-  nnoremap <silent> [denite]<C-d> :<C-u>call denite#start(
+  " [denite]d で dotfiles 編集
+  nnoremap <silent> [denite]d :<C-u>call denite#start(
   \ [{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
 
   " ripgrep 使用
@@ -107,10 +107,10 @@ hook_add = '''
 repo = 'tpope/vim-fugitive'
 hook_add = '''
   nnoremap [git]  <Nop>
-  nmap <C-g> [git]
-  nnoremap <silent> [git]<C-s> :Gstatus<CR><C-w>T
-  nnoremap <silent> [git]<C-d> :Gvdiff<CR>
-  nnoremap <silent> [git]<C-b> :Gblame<CR>
+  nmap <Space>g [git]
+  nnoremap <silent> [git]s :Gstatus<CR><C-w>T
+  nnoremap <silent> [git]d :Gvdiff<CR>
+  nnoremap <silent> [git]b :Gblame<CR>
   nnoremap <silent> [git]c :Gcommit-v<CR>
 '''
 
@@ -118,8 +118,8 @@ hook_add = '''
 repo = 'airblade/vim-gitgutter'
 hook_add = '''
   set updatetime=100
-  nmap [git]<C-g> <Plug>GitGutterStageHunk
-  nmap [git]<C-u> <Plug>GitGutterUndoHunk
+  nmap [git]g <Plug>GitGutterStageHunk
+  nmap [git]u <Plug>GitGutterUndoHunk
 '''
 
 [[plugins]]
