--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -32,21 +32,11 @@ hook_add = '''
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 hook_add = '''
-  " denite キー
-  noremap [denite] <Nop>
-  nmap <Space>d [denite]
-
   " s で split
   call denite#custom#map('normal', "s", '<denite:do_action:split>')
 
   " v で vsplit
   call denite#custom#map('normal', "v", '<denite:do_action:vsplit>')
-
-  " insert モードで <C-s> で split
-  call denite#custom#map('insert', "<C-s>", '<denite:do_action:split>')
-
-  " insert モードで <C-v> で vsplit
-  call denite#custom#map('insert', "<C-v>", '<denite:do_action:vsplit>')
 
   " C-j, C-k で上下移動
   call denite#custom#map('normal', '<C-j>', '<denite:move_to_next_line>')
@@ -54,41 +44,33 @@ hook_add = '''
   call denite#custom#map('insert', '<C-j>', '<denite:move_to_next_line>')
   call denite#custom#map('insert', '<C-k>', '<denite:move_to_previous_line>')
 
-  " [denite]k で単語単位での grep
-  nnoremap <silent> [denite]k
+  " <Space>k で単語単位での grep
+  nnoremap <silent> <Space>k
   \ :<C-u>Denite grep:::<C-r><C-w>
   \ -no-empty -mode=normal<CR>
 
-  " [denite]r で検索結果を開き直す
-  nnoremap <silent> [denite]r :<C-u>Denite -resume
+  " <Space>r で検索結果を開き直す
+  nnoremap <silent> <Space>r :<C-u>Denite -resume
   \ -no-empty -mode=normal<CR>
 
-  " [denite]n で次の検索結果へ
-  nnoremap <silent> [denite]n :<C-u>Denite -resume
+  " <Space>n で次の検索結果へ
+  nnoremap <silent> <Space>n :<C-u>Denite -resume
   \ -cursor-pos=+1 -immediately<CR>
 
-  " [denite]p で前の検索結果へ
-  nnoremap <silent> [denite]p :<C-u>Denite -resume
+  " <Space>p で前の検索結果へ
+  nnoremap <silent> <Space>p :<C-u>Denite -resume
   \ -cursor-pos=-1 -immediately<CR>
 
-  " [denite]f でプロジェクトファイル一覧
-  nnoremap <silent> [denite]f :<C-u>DeniteProjectDir file/rec
+  " <Space>f でプロジェクトファイル一覧
+  nnoremap <silent> <Space>f :<C-u>DeniteProjectDir file/rec
   \ -no-empty<CR>
 
-  " [denite]s でプロジェクトファイル一覧(default-action: split)
-  nnoremap <silent> [denite]s :<C-u>DeniteProjectDir file/rec
-  \ -no-empty -default-action=split<CR>
-
-  " [denite]v でプロジェクトファイル一覧(default-action: vsplit)
-  nnoremap <silent> [denite]v :<C-u>DeniteProjectDir file/rec
-  \ -no-empty -default-action=vsplit<CR>
-
-  " [denite]o で oldfiles 一覧
-  nnoremap <silent> [denite]o :<C-u>Denite file/old
+  " <Space>o で oldfiles 一覧
+  nnoremap <silent> <Space>o :<C-u>Denite file/old
   \ -no-empty<CR>
 
-  " [denite]d で dotfiles 編集
-  nnoremap <silent> [denite]d :<C-u>call denite#start(
+  " <Space>d で dotfiles 編集
+  nnoremap <silent> <Space>d :<C-u>call denite#start(
   \ [{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
 
   " ripgrep 使用
@@ -211,7 +193,7 @@ hook_add = '''
 [[plugins]]
 repo = 'simeji/winresizer'
 hook_add = '''
-  let g:winresizer_start_key = '<C-e><C-w>'
+  let g:winresizer_start_key = '<C-w><C-e>'
   let g:winresizer_vert_resize = 1
   let g:winresizer_horiz_resize = 1
 '''
