Vim: git log 用に agit.vim 追加

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -134,6 +134,12 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'cohama/agit.vim'
+hook_add = '''
+  nnoremap <silent> [git]l :Agit<CR>
+'''
+
+[[plugins]]
 repo='prabirshrestha/async.vim'
 
 [[plugins]]
