Vim: AgitFile キーマップ追加

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -137,6 +137,7 @@ hook_add = '''
 repo = 'cohama/agit.vim'
 hook_add = '''
   nnoremap <silent> [git]l :Agit<CR>
+  nnoremap <silent> [git]f :AgitFile<CR>
 '''
 
 [[plugins]]
